[tool.poetry]
name = "autopostingbot"
version = "0.1.0"
description = ""
authors = ["top1Dron <pro100moneyfarmer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^2.14.3"
asyncpg = "^0.23.0"
tortoise-orm = "^0.17.6"
aioschedule = "^0.5.2"
celery = "^5.1.2"
redis = "^3.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
